Creation exercice clickclickclick

--- a/src/content/docs/mm3b-sites-web-dynamique-1/index.mdx
+++ b/src/content/docs/mm3b-sites-web-dynamique-1/index.mdx
@@ -3,6 +3,7 @@ title: MM3B - Récits Interactifs
 description: Introduction aux récits interactifs web
 ---
 
+import { YouTube } from 'astro-embed';
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
 Bienvenue dans ce parcours dédié à la narration interactive. Vous allez découvrir comment transformer les gestes du spectateur en outils narratifs.
@@ -38,9 +39,24 @@ Le JavaScript n'est qu'une nouvelle syntaxe pour exprimer des idées que vous co
 Ces films explorent déjà la non-linéarité narrative. Nous allons transposer ces techniques au web :
 
 - **Rashomon** (Kurosawa) : une histoire, plusieurs points de vue → votre clic choisit quelle version entendre
+  Un crime dans la forêt. Quatre témoins racontent la même scène différemment. Aucune version n'est "la vraie".
+
+<YouTube id='https://www.youtube.com/watch?v=L2E_DfExUmU' />
+
 - **Mémento** (Nolan) : chronologie perturbée → vous décidez dans quel ordre explorer les souvenirs
+  Un homme perd la mémoire à court terme. Le film raconte son histoire à l'envers pour qu'on ressente sa confusion.
+
+<YouTube id="https://www.youtube.com/watch?v=sk4NyqHXT3Y" />
+
 - **Run Lola Run** (Tykwer) : variations sur un même événement → votre vitesse change le déroulement
+  Lola a 20 minutes pour sauver son copain. Le film rejoue trois fois la même histoire, chaque fois légèrement différente.
+
+<YouTube id="https://www.youtube.com/watch?v=ZCYnsUdO6H0" />
+
 - **Timecode** (Figgis) : écrans multiples simultanés → votre regard choisit quelle histoire suivre
+  Quatre histoires se déroulent en simultané dans quatre cadres. À vous de suivre où vous voulez regarder.
+
+<YouTube id="https://www.youtube.com/watch?v=YXr8W9i-Bz8" />
 
 ## Les 4 expériences narratives
 
