Improve click click click

--- a/src/content/docs/mm3b-sites-web-dynamiques-1/index.mdx
+++ b/src/content/docs/mm3b-sites-web-dynamiques-1/index.mdx
@@ -58,29 +58,58 @@ Ces films explorent déjà la non-linéarité narrative. Nous allons transposer 
 
 <YouTube id="https://www.youtube.com/watch?v=YXr8W9i-Bz8" />
 
+## Comment ce parcours est structuré
+
+Chaque expérience est organisée en **deux pages complémentaires** :
+
+1. **La pratique** : L'expérience, le code commenté, les défis progressifs. C'est ce qu'on explore ensemble en cours.
+2. **La théorie** : Réfence consultable quand tu bloques. Pas à lire d'un coup, mais à chercher au besoin.
+
+Les deux se parlent et se renvoient l'une vers l'autre.
+
+---
+
 ## Les 4 expériences narratives
 
 Nous allons créer ensemble 4 expériences qui explorent différentes formes d'interaction :
 
-### 1. Le personnage qui vous observe
-**Interaction** : Mouvement de la souris  
-**Concept narratif** : Votre regard guide l'émotion  
+### 1. Clickclickclick - Les bases (pratique + théorie)
+**Interaction** : Clics partout
+**Concept narratif** : Chaque action est enregistrée
+**Référence** : Critique de la surveillance web
+
+📌 **[Clickclickclick - La pratique →](clickclickclick-pratique)** (en cours)
+📚 **[JavaScript - Fondamentaux →](javascript-fondamentaux)** (référence théorique)
+
+---
+
+### 2. Le personnage qui vous observe
+**Interaction** : Mouvement de la souris
+**Concept narratif** : Votre regard guide l'émotion
 **Référence** : Le cadrage comme outil émotionnel
 
-### 2. L'histoire à plusieurs voix
-**Interaction** : Clics + audio  
-**Concept narratif** : Vous montez le film en direct  
+📌 **[Le personnage qui vous observe - La pratique →](personnage-observe)**
+
+### 3. L'histoire à plusieurs voix
+**Interaction** : Clics + audio
+**Concept narratif** : Vous montez le film en direct
 **Référence** : Rashomon interactif
 
-### 3. La chambre des souvenirs
-**Interaction** : Survol + vidéo  
-**Concept narratif** : Vous choisissez la chronologie  
+📌 **[L'histoire à plusieurs voix - La pratique →](histoire-voix)**
+
+### 4. La chambre des souvenirs
+**Interaction** : Survol + vidéo
+**Concept narratif** : Vous choisissez la chronologie
 **Référence** : Mémento spatial
 
-### 4. La vitesse du temps
-**Interaction** : Défilement + vidéo  
-**Concept narratif** : Vous contrôlez le tempo  
+📌 **[La chambre des souvenirs - La pratique →](chambre-souvenirs)**
+
+### 5. La vitesse du temps
+**Interaction** : Défilement + vidéo
+**Concept narratif** : Vous contrôlez le tempo
 **Référence** : Le montage comme rythme
+
+📌 **[La vitesse du temps - La pratique →](vitesse-temps)**
 
 ## Comment aborder ce parcours
 
